---------------------------------------------------------------------------------------------------
Version: 0.1.8
Date: 17.03.2023
  Bugfixes:
    - fixed HTR fluidbox not being big enough for its recipes to craft
  Changes:
    - lithium recipe for batteries buffed
    - energy crystal growing now uses 15 acidic water per process
    - get 8 instead of 5 computer age science packs per craft, same for advanced computer age
    - get 5 instead of 3 electrictiy science packs per craft
    - made module cores a bit cheaper
    - computer cores only use 5 instead of 15 electronic parts per cycle
    - 25 less lube needed per blue belt also for splitters and undergrounds
    - fusion quantum age pack requires 1 charged neutron container
    - space quantum age requires 4 advanced rocket fuel, 4 space data
    - reduced data inputs for all quantum computer datas
---------------------------------------------------------------------------------------------------
Version: 0.1.7
Date: 16.03.2023
  Features:
    - added a better recipe for ceramic in the advanced chemical plant using water instead of steam
    - added a better recipe for plastic in the advanced chemical plant using petrol + lightoil + crushed coke with high yield
  Changes:
    - streamlined nitric acid production, reduced time needed
    - reduced time needed to make hydrogen from water
    - reduced sulfuric acid usage in batteries and red circuit
    - one less plastic per red belt
    - reduced steam needed for ceramic
  Bugfixes:
    - fixed a edgecase when matrix components were placed in non active induction matrix
    - fixed more lang typos and overwritten vanilla rocket silo
    - fixed that petroleum reforming was requiring advanced computer age tech
---------------------------------------------------------------------------------------------------
Version: 0.1.6
Date: 15.03.2023
  Features:
    - added a improved recipe for rocket parts using odd plating and carbon structure
  Bugfixes: